Fix position of prototype watch on mobile

--- a/Resources/Style/MainPage.css
+++ b/Resources/Style/MainPage.css
@@ -310,7 +310,7 @@ body{
 		z-index: 2;
 		position: absolute;
 		top: 135vh;
-		left: 10vw;
+		left: 6vw;
 		width: 30vh;
 	}
 	#Prototype_Watch_2{
